# SolveTaskAI

./: .gitignore  HOW TO RUN.md  IDEAS.MD  README  TODO.MD  compose-dev.yaml  compose.yaml  tailwind.config.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py
backend/app/: dependencies.py  dependency.py  main.py
backend/app/agent/: configuration.py  graph.py  prompts.py  schema.py  state.py  thread_manager.py  tools.py  utils.py
backend/app/api/: agent.py  apikey.py  auth.py  chat.py  projects.py  ticketing.py
backend/app/config/: config.py  enums.py  logger.py
backend/app/db/: pool.py  postgres.py  session.py  sync.py
backend/app/dto/: agent.py  api_key.py  cookie.py  document_embeddings.py  llm_model.py  user.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/middleware/: auth_middleware.py
backend/app/misc/: config.py  encryption.py  exception.py  pool.py  redis.py  security.py  settings.py
backend/app/model/: __init__.py  api_key.py  associations.py  base.py  chat_session.py  document_embeddings.py  project.py  user.py
backend/app/models/: api_key.py  associations.py  chat_session.py  document_embeddings.py  embedding.py  project.py  user.py
backend/app/repositories/: apikey_repository.py  chat_session_repository.py  document_embeddings_repository.py  project_repository.py  thread_repository.py  user_repository.py
backend/app/repository/: api_key.py  apikey_repository.py  chat_session_repository.py  document_embeddings.py  document_embeddings_repository.py  project.py  project_repository.py  thread_repository.py  user.py  user_repository.py
backend/app/route/: agent.py  apikey.py  auth.py  chat.py  projects.py  ticketing.py
backend/app/schema/: agent.py  api_key.py  cookie.py  document_embeddings.py  project.py  status.py  ticket.py  user.py
backend/app/schemas/: agent.py  api_key.py  chat.py  cookie.py  llm_model.py  project.py  ticket.py  user.py
backend/app/service/: apikey.py  apikey_service.py  auth.py  document_embeddings.py  document_embeddings_service.py  project.py  project_service.py  user.py  user_service.py
backend/app/services/: apikey_service.py  auth_service.py  document_embeddings_service.py  project_service.py  user_service.py
backend/app/utils/: cookie_manager.py  security.py
backend/config/: __init__.py  config.py
backend/data_extractor/: __init__.py  data_extractor.py  data_extractor_facade.py  data_extractor_factory.py
backend/data_extractor/details/: data_extractor_azure.py  data_extractor_jira.py
backend/exceptions/: handlers.py
backend/migrations/: env.py
backend/models/: __init__.py  session.py  user.py
backend/schemas/: __init__.py  auth.py
backend/services/data_extractor/: __init__.py  data_extractor_factory.py
backend/src/: dependencies.py  main.py
backend/src/agent/: __init__.py  configuration.py  graph.py  prompts.py  schema.py  state.py  utils.py
backend/src/api/: agent.py  apikey.py  auth.py  chat.py  projects.py  test.py  ticketing.py
backend/src/config/: __init__.py  config.py  csrf_settings.py  enums.py  logger.py
backend/src/db/: __init__.py  pool.py  session.py  sync.py
backend/src/exceptions/: __init__.py  custom_exceptions.py  handlers.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: __init__.py  api_key.py  apikey.py  associations.py  chat_session.py  company.py  project.py  (+5 more)
dev/backend/: .dockerignore  .env.example  .pylintrc  Dockerfile  Dockerfile.dev  pyproject.toml
(+429 files in other folders)
