[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.15",
    "langchain-postgres>=0.0.14",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary,pool]>=3.2.7",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "httpx[http2]>=0.28.1",
    "redis[hiredis]>=6.0.0",
    "cryptography>=44.0.2",
    "brevo-python>=1.1.2",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
]
